tests/UI/Positive/TC-UI-TS01-02.robot
*** Settings ***
Library    SeleniumLibrary
Resource    ../../../resources/keywords/common_keywords.robot
Resource    ../../../resources/pages/LoginPage.robot

Suite Setup    Load Environment
Test Setup    Open Application
Test Teardown    Close Application

*** Test Cases ***
User Account Login
    [Documentation]    Logging in to the user account
    [Tags]    ui
    Log in to Para Bank
    Sleep    3s